test/parser/top_level.al
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s

// CHECK: [[# @LINE + 1 ]]:1: error: only function definitions are allowed on the top level
while 0.0 {}
